--- a/static/leerlijn.html
+++ b/static/leerlijn.html
@@ -26,10 +26,10 @@
   <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div class="overlay-content">
-      <a href="#home" onclick="closeNav()">Home</a>
-      <a href="#IPO" onclick="closeNav()">IPO</a>
-      <a href="#leerlijn" onclick="closeNav()">Leerlijn</a>
-      <a href="#partners" onclick="closeNav()">Partners</a>
+      <a href="index.html#home" onclick="closeNav()">Home</a>
+      <a href="index.html#IPO" onclick="closeNav()">IPO</a>
+      <a href="index.html#leerlijn" onclick="closeNav()">Leerlijn</a>
+      <a href="index.html#partners" onclick="closeNav()">Partners</a>
     </div>
   </div>
   <span onclick="openNav()" class="hamburger2">&#9776;</span>
