--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
   <!-- START HOMEPAGE ZANI en WAIL -->
   
   <section class="homePage">
-    <img src="static/img/logo.png" alt="logo" class="static-logo">
+    <img src="/static/img/logo.png" alt="logo" class="static-logo">
 <div class="video-animation">
   <!-- <video autoplay>
     <source src="/Home-Animation-Transparant100kb.m4v" type="video/mp4">
